--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@formkit/nuxt": "^1.0.0-beta.15",
     "@formkit/themes": "^1.0.0-beta.16-da20c64",
     "@formkit/vue": "^1.0.0-beta.15",
+    "@vueuse/core": "^9.12.0",
     "aos": "^2.3.4"
   }
 }
