--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@formkit/themes": "^1.0.0-beta.16-da20c64",
     "@formkit/vue": "^1.0.0-beta.15",
     "@vueuse/core": "^9.12.0",
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "vue-fuse": "^4.1.1"
   }
 }
